k8s/strapi-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: strapi-deployment
  namespace: amaka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: strapi
  template:
    metadata:
      labels:
        app: strapi
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "1337" # The port your application listens to.
    spec:
      containers:
        - name: strapi
          image: mogobanyamwaro/strapi-backend:latest
          ports:
            - containerPort: 1337
          resources:
            requests:
              memory: "400Mi"
              cpu: "200m"
            limits:
              memory: "1024Mi"
              cpu: "1000m"
---
apiVersion: v1
kind: Service
metadata:
  name: strapi-service
  namespace: amaka
spec:
  selector:
    app: strapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 1337
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: strapi-ingress
  namespace: amaka
  annotations:
    kubernetes.io/ingress.class: "public"
spec:
  ingressClassName: public
  rules:
    - host: strapi.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: strapi-service
                port:
                  number: 80
# microk8s kubectl port-forward -n ingress daemonset/nginx-ingress-microk8s-controller 8080:80
